# JuliaOpenCVBindingGenerator

./: .gitignore  README.md  dumpt.txt
package/OpenCV/: Manifest.toml  Project.toml
package/OpenCV/src/: OpenCV.jl
src2/: CMakeLists.txt  TODO.md  auto_cv2.cpp  auto_cv23.cpp  auto_generate.py  autocode.cpp  autogen_manual_header.h  cv2.cpp  cv2.jl  defval.txt  dump.txt  gen2.py  gen3_cpp.py  gen3_julia.py  gen3_julia_cxx.py  hdr_parser.py  parse_tree.py  template_cv2.cpp  template_cv2_submodule.jl  test.cpp  tt.cpp
src2/autogen_cpp/: cv2_core.cpp  cv_core.cpp  cv_fisheye_wrap.cpp  cv_flann_wrap.cpp  cv_internal_wrap.cpp  cv_ml_wrap.cpp  cv_ocl_wrap.cpp  cv_traits_wrap.cpp  cv_wrap.cpp  jlcv2.cpp  jlcv2.hpp  jlcv2_types.hpp
src2/autogen_jl/: cv_Error_wrap.jl  cv_core.jl  cv_cudev_wrap.jl  cv_cxx.jl  cv_cxx_wrap.jl  cv_dnn_cxx_wrap.jl  cv_dnn_wrap.jl  cv_fisheye_wrap.jl  cv_flann_wrap.jl  cv_internal_wrap.jl  cv_ipp_cxx_wrap.jl  cv_ml_wrap.jl  cv_ocl_wrap.jl  cv_traits_wrap.jl  cv_utils_cxx_wrap.jl  cv_wrap.jl  mat_conversion.jl  types_conversion.jl  typestructs.jl
src2/binding_templates_cpp/: cv_core.cpp  cv_wrap.cpp  template_cv2_submodule.cpp
src2/binding_templates_jl/: template_cv2_root.jl  template_cv2_submodule.jl
src2/binding_templates_julia/: template_cv2_root.jl
src2/cpp_files/: cv_core.cpp  jlcv2.hpp
src2/jl_cxx_files/: Mat.jl  Vec.jl  cv_core.jl  cv_cxx.jl  cv_manual_wrap.jl  mat_conversion.jl  types_conversion.jl
src2/jl_files/: Mat.jl  OpenCVImage.jl  cv_core.jl  cv_core_2.jl  cv_cxx.jl  mat_conversion.jl  types_conversion.jl
test/: CMakeLists.txt  README.md  cv_Error_cxx_wrap.jl  cv_core.cpp  cv_core.jl  cv_core2.cpp  cv_core_prev.cpp  cv_core_prev2.cpp  cv_core_temp.cpp  cv_cuda_wrap.jl  cv_cxx.jl  cv_cxx_wrap.jl  cv_dnn_cxx_wrap.jl  cv_internal_wrap.jl  cv_ipp_cxx_wrap.jl  cv_ipp_wrap.jl  cv_ogl_wrap.jl  cv_samples_wrap.jl  cv_traits_wrap.jl  cv_utils_wrap.jl  cv_wrap.jl  face_detect.jl  face_detect_dnn.jl  jlcv2.hpp  mat_conversion.jl  webcam_test.jl
test/jlcxx/: array.hpp
